force-app/main/default/objects/Case/fields/E2CP__AdditionalTo__c.field-meta.xml
<CustomField>
    <fullName>E2CP__AdditionalTo__c</fullName>
    <description>Stores email addresses entered on the New Comment page Additional To section. The SuppliedEmail (Web Email) value is added automatically on case creation if a valid Contact isn&apos;t associated.</description>
    <label>Additional To</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>