force-app/main/default/objects/Case/fields/E2CP__AdditionalToPrivate__c.field-meta.xml
<CustomField>
    <fullName>E2CP__AdditionalToPrivate__c</fullName>
    <description>Stores private email addresses entered on the New Comment page Additional To section.</description>
    <label>Additional To (Private)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>