force-app/main/default/objects/Case/fields/E2CP__HistoryTextPrivate__c.field-meta.xml
<CustomField>
    <fullName>E2CP__HistoryTextPrivate__c</fullName>
    <description>Contains a chronology of the most recent 25 private case comments (up to 32,000 chars) for inclusion in email templates. This field is updated when inbound emails are received and outbound emails are sent through the New Comment page.</description>
    <label>History Text Private</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>