force-app/main/default/objects/Case/fields/E2CP__Latest_Inbound_BH__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Latest_Inbound_BH__c</fullName>
    <description>When the Enable Latest Inbound BH setting is enabled in setup, this field is populated with the current state of Business Hours each time a new inbound email is received through Email to Case Premium. Consider using this field in your rule criteria for Auto-Response rules (or other automation such as Flows) to send appropriate emails based on whether the current time falls inside or outside of Business Hours.</description>
    <label>Latest Inbound BH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside of Business Hours</fullName>
            </value>
            <value>
                <fullName>Outside of Business Hours</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>