force-app/main/default/objects/Case/fields/E2CP__Most_Recent_Public_Comment__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Most_Recent_Public_Comment__c</fullName>
    <description>Contains the most recent public comment, as it was typed, without any pre-pended recipients or attachments notations that may be added to the case comment record.</description>
    <label>Most Recent Public Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>