force-app/main/default/objects/Case/fields/FLAGS__Business_Hours_Age_3__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Business_Hours_Age_3__c</fullName>
    <label>Business Hours Age 3</label>
    <summarizedField>FLAGS__Case_Flags_History_Tracking__c.FLAGS__Business_Hours_in_Age_3__c</summarizedField>
    <summaryForeignKey>FLAGS__Case_Flags_History_Tracking__c.FLAGS__Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>