force-app/main/default/objects/Case/fields/FLAGS__Case_Flag_Age__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case_Flag_Age__c</fullName>
    <description>The total amount of time (in hours) since the Case Flag was set.</description>
    <formula>(NOW() - FLAGS__ViewedFlag__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Flag Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>