force-app/main/default/objects/Case/fields/FLAGS__Case_Flag_Age_Text__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case_Flag_Age_Text__c</fullName>
    <description>The Case Flag Age decimal rendered as a eight-digit string used to aid with sorting on list views.</description>
    <formula>LPAD(TEXT(ROUND(FLAGS__Case_Flag_Age__c*100,0)),8,&apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Flag Age Text</label>
    <type>Text</type>
</CustomField>