force-app/main/default/objects/Case/fields/FLAGS__CaseTimeOffset1__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__CaseTimeOffset1__c</fullName>
    <description>The number of hours after the Case Flag Date/Time when Flag 1 will be displayed.</description>
    <label>Case Flags Age 1 Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>