force-app/main/default/objects/Case/fields/FLAGS__CurrentBusinessHours__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__CurrentBusinessHours__c</fullName>
    <description>The amount of business hours that have lapsed on the current day.</description>
    <formula>IF(ISNULL(FLAGS__ViewedFlag__c) || FLAGS__CaseFlagsBusinessHours__r.FLAGS__TodayStartTime__c &gt; NOW() || FLAGS__ViewedFlag__c &gt; FLAGS__CaseFlagsBusinessHours__r.FLAGS__TodayEndTime__c,0,(
IF(FLAGS__CaseFlagsBusinessHours__r.FLAGS__TodayEndTime__c &lt; NOW(),FLAGS__CaseFlagsBusinessHours__r.FLAGS__TodayEndTime__c,NOW()) - IF(FLAGS__CaseFlagsBusinessHours__r.FLAGS__TodayStartTime__c &gt; FLAGS__ViewedFlag__c,FLAGS__CaseFlagsBusinessHours__r.FLAGS__TodayStartTime__c,FLAGS__ViewedFlag__c))*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Business Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>