force-app/main/default/objects/Case/fields/FLAGS__Enable_Case_Flags__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Enable_Case_Flags__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Case Flags</label>
    <type>Checkbox</type>
</CustomField>