force-app/main/default/objects/Case/fields/FLAGS__Initial_Response__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Initial_Response__c</fullName>
    <description>Timestamp of Initial Response set the first time the Case Flag is cleared.</description>
    <label>Initial Response</label>
    <type>DateTime</type>
</CustomField>