force-app/main/default/objects/Case/fields/FLAGS__Initial_Response_Hours__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Initial_Response_Hours__c</fullName>
    <description>The hours between Date/Time Opened and Initial Response.</description>
    <formula>(FLAGS__Initial_Response__c - CreatedDate) * 24</formula>
    <label>Initial Response Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>