force-app/main/default/objects/Case/fields/FLAGS__PreviousBusinessHours__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__PreviousBusinessHours__c</fullName>
    <description>The amount of business hours that have lapsed prior to, but not including, the current day.</description>
    <label>Previous Business Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>