force-app/main/default/objects/Case/fields/FLAGS__ViewedFlag__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__ViewedFlag__c</fullName>
    <description>The timestamp that the Case Flag was set.</description>
    <label>Case Flag Date/Time</label>
    <type>DateTime</type>
</CustomField>