force-app/main/default/objects/Case/fields/ImpartnerPRM__PartnerAccount__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerPRM__PartnerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>