force-app/main/default/objects/Case/listViews/FLAGS__All_Open_or_Flagged.listView-meta.xml
<ListView>
    <fullName>FLAGS__All_Open_or_Flagged</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FLAGS__CaseFlag__c</columns>
    <columns>FLAGS__Case_Flag_Business__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>FLAGS__ViewedFlag__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Open or Flagged</label>
</ListView>